[tool.poetry]
name = "fastapi-github-action"
version = "0.1.0"
description = ""
authors = ["hojiakbar2806 <hojiakbarnasriddinov2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.9"
fastapi = {extras = ["all"], version = "^0.111.0"}
pytest = "^8.2.2"
mangum = "^0.17.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
